<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:padding="@dimen/margin_default">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dialog_add_berita_judul"
            style="@style/TextInputLayoutForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dialog_add_berita_judul"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_judul"
                android:imeOptions="actionDone"
                android:textSize="@dimen/text_large_" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dialog_add_berita_image"
            style="@style/TextInputLayoutForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dialog_add_berita_image"
                style="@style/EditTextNotEditable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_headline_image" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dialog_add_berita_deskripsi"
            style="@style/TextInputLayoutForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dialog_add_berita_deskripsi"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_deskripsi"
                android:textSize="@dimen/text_default" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default">

            <Button
                android:id="@+id/btn_dialog_add_berita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/label_btn_add" />

            <Button
                android:id="@+id/btn_dialog_cancel_berita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_toStartOf="@+id/btn_dialog_add_berita"
                android:text="@string/label_btn_cancel" />
        </RelativeLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>