<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_up_corners"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/img_default"
            android:layout_height="@dimen/img_default"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_xlarge__"
            android:layout_marginTop="@dimen/margin_default"
            app:cardCornerRadius="@dimen/img_default_corner">

            <ImageView
                android:id="@+id/iv_dialog_add_member"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/nav_header_desc"
                android:scaleType="centerCrop" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dialog_add_member_npm"
            style="@style/InputLayoutWithMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dialog_add_member_npm"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_npm"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dialog_add_member_nama"
            style="@style/InputLayoutWithMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dialog_add_member_nama"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_nama"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dialog_add_member_no_hp"
            style="@style/InputLayoutWithMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dialog_add_member_no_hp"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_no_hp"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            style="@style/DefaultMargins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorBackgroundDefault"
            app:cardCornerRadius="4dp">

            <Spinner
                android:id="@+id/spn_dialog_add_member_tahun"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_height" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_add_member_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:text="@string/label_btn_add" />
    </LinearLayout>


</RelativeLayout>