<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/ll_time_form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dialog_add_kegiatan_tanggal"
            style="@style/InputLayoutWithMargin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dialog_add_kegiatan_tanggal"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/label_tanggal"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dialog_add_kegiatan_jam"
            style="@style/InputLayoutWithMargin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dialog_add_kegiatan_jam"
                style="@style/EditTextForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:enabled="false"
                android:focusable="false"
                android:hint="@string/label_jam"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_dialog_add_kegiatan_deskripsi"
        style="@style/InputLayoutWithMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_time_form_container"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_dialog_add_kegiatan_deskripsi"
            style="@style/EditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_deskripsi_kegiatan"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_dialog_add_kegiatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_dialog_add_kegiatan_deskripsi"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/margin_default"
        android:text="@string/label_btn_add" />

</RelativeLayout>